fixed gap between restuants section and footer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -148,7 +148,8 @@ main {
     .section-resturants-container {
         background-color: #f1f1f1;
         width: 414px;
-        height: 1237px;
+        height: 1300px;
+        margin-bottom: -16px;
 
         h2 {
             margin-top: 0px;
